img 4px gap fixed

--- a/JavaScript2/Week2/style.css
+++ b/JavaScript2/Week2/style.css
@@ -91,6 +91,7 @@ li {
 }
 
 .cover img {
+  display: block;
   width: 100%;
 }
 
